tests/e2e/ranges9.error
Error: syntax error in story at line 2, column 5

2|    a = b[:-1]
          ^^^^^

E0104: `boolean` can't be indexed with `range` of type `range`
