tests/e2e/ranges9.story
b = true
a = b[:-1]
